# test-assignment-Diabotical-stats

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
diabotical_stats/: cli.py  diabotical_stats.py
diabotical_stats/scripts/: diabotical_stats.py  leaderboard.py
